Fri Feb  8 05:39:15 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: HTTP.Proxy should use self for proxy-class's
	  super class.

	* lib/net/http.rb: initialize HTTP.proxy_port by HTTP.port.

Thu Feb 07 13:44:08 2002  akira yamada  <akira@arika.org>

	* uri/common.rb (URI::join): new method.

	* uri/generic.rb (Generic#merge): URI.parse("http://a/")+"b" should
	  return "http://a/b" but it returned "http://a//b".

	* uri/generic.rb (Generic#check_path): corrected error message, 
	  @path -> v

Wed Feb  6 17:18:54 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* configure.in: keep old config.h unless changed.

Mon Feb  4 15:38:29 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_class_real): should not follow ICLASS link

	* variable.c (classname): should follow ICLASS link explicitly.

Thu Jan 31 20:45:33 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (dir_config): prior --with flag.

	* lib/mkmf.rb (arg_config): avoid special variables for
	  font-lock-mode.

Wed Jan 30 13:37:05 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_search): should set regs.allocated.

Mon Jan 28 18:33:18 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yylex): strict check for numbers.

Mon Jan 28 13:29:41 2002  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (is_defined): defined?(Foo::Baz) should check constants
	  only, no methods.

	* eval.c (is_defined): should not dump core on defined?(a::b)
	  where a is not a class nor a module.

Fri Jan 25 17:48:43 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (solaris): add '-shared' only for GNU ld.

Fri Jan 25 17:16:23 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): detect cyclic module inclusion.

Fri Jan 25 02:17:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): should check time only if BOTH
	  WAIT_SELECT and WAIT_TIME.

Thu Jan 24 05:42:01 2002  Koji Arai  <jca02266@nifty.ne.jp>
