@@ -5,6 +5,15 @@ Fri Feb  8 05:39:15 2002  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/net/http.rb: initialize HTTP.proxy_port by HTTP.port.
 
+Fri Feb  8 01:27:33 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* parse.y (yycompile): should inherit "in_single" if eval happened
+	  in a singleton method.
+
+	* eval.c (rb_eval): class variables from singleton methods defined
+	  within singleton class statement should work like ones defined
+	  by sington def statements.
+
 Thu Feb 07 13:44:08 2002  akira yamada  <akira@arika.org>
 
 	* uri/common.rb (URI::join): new method.
